@@ -1,3 +1,5 @@
+alter table shop_items_product change retrieval_num sale_num int(11) NOT NULL;
+alter table shop_items_productsku change retrieval_num sale_num int(11) NOT NULL;
 alter table shop_items_product add column sale_time date,add index item_sale_time_idx(sale_time);
 ########### 2015-3-16  #################
 alter table shop_items_product add column sale_charger varchar(32) NOT NULL, add index (sale_charger);
